# POS-semestralka

./: CMakeLists.txt
include/: client.h  constants.h  game.h  menu.h  server.h  sockstruct.h  startmenu.h
src/: CMakeLists.txt  client.c  game.c  main.c  menu.c  server.c  startmenu.c
